fix header on small screen

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-  font-size: clamp(14px, 2vw, 16px);
+  font-size: clamp(13px, 2vw, 16px);
   line-height: 1.4;
 
   --bg-color: white;
